<resources>
    <string name="app_name">ONGAndroid</string>
    <string name="text_input_layout_hint_email">Email</string>
    <string name="text_input_layout_password_hint">Contraseña</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="text_view_forgot_password">OLVIDASTE TU CONTRASEÑA?</string>
    <string name="text_view_don_t_have_an_account">No tienes una cuenta?</string>
    <string name="btn_sign_up_text">SIGN UP</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="facebook_app_id">123506287667771</string>
    <string name="fb_login_protocol_scheme">fb123506287667771</string>

    <string name="username">Nombre de usuario</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="title_sign_up">Registrar Usuario</string>
    <string name="text_button_save">Guardar</string>
    <string name="text_button_cancel">Cancelar</string>
    <string name="error_passwords_matches">Passwords are not the same</string>
    <string name="user_success_sign_up">User was successfully register</string>

    <string name="api_error_message">Ha ocurrido un error obteniendo la información</string>

    <string name="timer_message">Timer has finished</string>

    <string name="welcome_title">BIENVENIDOS</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="btn_text_try_again">Reintentar</string>

    <string name="customactivityoncrash_error_activity_error_occurred_explanation">Ha ocurrido un error.\nDisculpe las molestias.</string>
    <string name="customactivityoncrash_error_activity_restart_app">Reiniciar App</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Cerrar</string>

    <string name="error">Error</string>
    <string name="sign_up_error">Error al registrarse</string>
    <string name="ok">OK</string>
    <string name="welcome">Bienvenidos</string>
    <string name="activities">Actividades</string>
    <string name="stories">Testimonios</string>
    <string name="us">Nosotros</string>
    <string name="contact">Contacto</string>
    <string name="nav_welcome">Navegando a Bienvenidos</string>
    <string name="nav_stories">Navegando a Testimonios</string>
    <string name="nav_news">Navegando a Ultimas Novedades</string>
    <string name="news">Ultimas Novedades</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="title_member_detail">Detalle del miembro</string>
    <string name="member_name">Nombre y Apellido:</string>
    <string name="member_position">Puesto:</string>
    <string name="member_facebook">Facebook:</string>
    <string name="member_linkedin">LinkedIn:</string>
    <string name="without_facebook"><u>No tiene cuenta en Facebook pero podes clickearlo para probar la redirección</u></string>
    <string name="without_linkedin"><u>No tiene cuenta en LinkedIn pero podes clickearlo para probar la redirección</u></string>
    <string name="member_name_example">Candela Martinez</string>
    <string name="member_position_example">Voluntario</string>

    <string name="bad_request">Bad request</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="api_error">Api error</string>
    <string name="incorrect_user_or_password">Incorrect user or password</string>
    <string name="testimonials_error">Error al obtener los testimonios</string>
    <string name="retry">Reintentar</string>

    <string name="without_info">Sin información</string>
    <string name="empty_field_message">Este campo no debe estar vacio</string>
    <string name="invalid_email_message">Ingresa un correo válido</string>

    <string name="contact_with_us">Contactate con nosotros</string>
    <string name="contact_full_name">Nombre y apellido</string>
    <string name="contact_message_hint">Escribe tu consulta</string>
    <string name="send_text">Enviar</string>

</resources>