<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/welcome"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/welcome" />
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />
    <item
        android:id="@+id/activities"
        android:enabled="true"
        android:icon="@drawable/ic_activities"
        android:title="@string/activities" />
    <item
        android:id="@+id/stories"
        android:enabled="true"
        android:icon="@drawable/ic_testimonial"
        android:title="@string/stories" />

    <item
        android:id="@+id/us"
        android:enabled="true"
        android:icon="@drawable/ic_us"
        android:title="@string/us" />

    <item
        android:id="@+id/contact"
        android:enabled="true"
        android:icon="@drawable/ic_contact"
        android:title="@string/contact" />
</menu>